--- a/LambdaApp/pom.xml
+++ b/LambdaApp/pom.xml
@@ -71,6 +71,15 @@
             <version>1.11.825</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/com.amazonaws/aws-java-sdk -->
+        <dependency>
+            <groupId>com.amazonaws</groupId>
+            <artifactId>aws-java-sdk</artifactId>
+            <version>1.11.825</version>
+        </dependency>
+
+
+
     </dependencies>
 
 </project>
